# Temperature_Sensor

./: CMakeLists.txt  Kconfig  README.rst  prj.conf
boards/: msd_zigbee_52840.overlay  nrf52840dk_nrf52840.overlay
dts/bindings/: msdz.yaml
include/: zb_mem_config_custom.h
msd_zigbee_52840/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config  zephyr_modules.txt  zephyr_settings.txt
msd_zigbee_52840/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig
msd_zigbee_52840/modules/CANopenNode/: cmake_install.cmake
msd_zigbee_52840/modules/TraceRecorder/: cmake_install.cmake
msd_zigbee_52840/modules/cddl-gen/: cmake_install.cmake
msd_zigbee_52840/modules/civetweb/: cmake_install.cmake
msd_zigbee_52840/modules/cjson/: cmake_install.cmake
msd_zigbee_52840/modules/cmsis/: cmake_install.cmake
msd_zigbee_52840/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  merged.hex  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.map  zephyr_pre1.map
src/: app.c  emfat.c  emfat.h  emfat_dev.c  io_adc.c  io_adc.h  main.c  main.h  measure_NTC.c  measure_NTC.h  modbus.c  modbus.h  modbus_hard.c  modbus_hard.h  modbus_reg.c  modbus_reg.h  modbus_x_macros.h  user_mem.c  user_mem.h
(+148 files in other folders)
